--- a/web-app/index.html
+++ b/web-app/index.html
@@ -9,7 +9,7 @@
 
         <div class="topnav" id="myTopnav">
             <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
-            <a><h1>Welcome Ms. (Name)</h1></a>
+            <a><h1>Welcome (Name)</h1></a>
         </div>
 
         <div id="mySidenav" class="sidenav">
