Changed the layout of index.html

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -9,7 +9,7 @@
 
         <div class="topnav" id="myTopnav">
             <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
-            <a><h1>Welcome (Name)</h1></a>
+            <a style="float: left"><h1>Welcome (Name)</h1></a>
         </div>
 
         <div id="mySidenav" class="sidenav">
@@ -32,55 +32,6 @@
                     <li id="purple">...</li>
                     <li id="green">...</li>
                     <li id="red">...</li>
-
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li><li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-                    <!--<li id="blue">9415A</li>-->
-                    <!--<li id="purple">...</li>-->
-                    <!--<li id="green">...</li>-->
-                    <!--<li id="red">...</li>-->
-
                 </ul>
             </div>
 
