Modified index.html added new icons to side-nav

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -18,11 +18,11 @@
             <a href="#"><img src="images/icons/glyphicons-4-user.png" alt="profile-icon">&emsp;Profile</a>
             <a href="#">Account Settings</a>
             <a href="#"><img src="images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Sync</a>
-            <a href="#">Customize</a>
-            <a href="#">Report Problem</a>
-            <a href="#">Privacy and Terms</a>
-            <a href="#">Help</a>
-            <a href="#">Log out</a>
+            <a href="#">&emsp;Customize</a>
+            <a href="#">&emsp;Report Problem</a>
+            <a href="#">&emsp;Privacy and Terms</a>
+            <a href="#">&emsp;Help</a>
+            <a href="#"><img src="images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
         </div>
 
         <div class="row">
