added classcode and student list functionality

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -4,12 +4,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/navigation.css" rel="stylesheet">
+
+        <script src="js/navigation.js"></script>
     </head>
     <body>
-
         <div class="topnav" id="myTopnav">
             <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
-            <a><h1>Welcome (Name)</h1></a>
+            <a><h1>iCheck</h1></a>
+            <a href="pages/classcode.html" style="float: right"><h1>Classcodes</h1></a>
+            <a href="index.html" style="float: right"><h1>Home</h1></a>
         </div>
 
         <div id="mySidenav" class="sidenav">
@@ -47,6 +50,6 @@
             </div>
 
         </div>
-        <script src="js/navigation.js"></script>
+
     </body>
 </html>
