--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -4,17 +4,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/navigation.css" rel="stylesheet">
+
+        <script src="../js/navigation.js"></script>
     </head>
     <body>
 
-        <div class="topnav" id="myTopnav">
-            <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
-            <a><h1>(Classcode)</h1></a>
-        </div>
+    <div class="topnav" id="myTopnav">
+        <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
+        <a><h1>iCheck</h1></a>
+        <a href="../pages/classcode.html" style="float: right"><h1>Classcodes</h1></a>
+        <a href="../index.html" style="float: right"><h1>Home</h1></a>
+    </div>
 
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#" id="profile"><img id ="profpic" src="images/icon.png" alt="icheck_logo"><br/>John Doe<br/>contact@example.com</a>
+            <a href="#" id="profile"><img id ="profpic" src="../images/icon.png" alt="icheck_logo"><br/>John Doe<br/>contact@example.com</a>
             <a href="#"><img src="../images/icons/glyphicons-4-user.png" alt="profile-icon">&emsp;Profile</a>
             <a href="#"><img src="../images/icons/glyphicons-137-cogwheel.png" alt="profile-icon">&emsp;Account Settings</a>
             <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Sync</a>
@@ -28,28 +32,29 @@
         <div class="row">
             <div class="col-3 col-m-3 menu">
                 <ul>
-                    <li id="blue">9415A</li>
-                    <li id="purple">...</li>
+                    <li id="blue" onclick="CreateTableFromJSON('class_9413A')">9413A IT324 Networks 11:30-12:30 TF</li>
+                    <li id="purple"onclick="CreateTableFromJSON('class_9415B')">9415B KUNWARI</li>
                     <li id="green">...</li>
                     <li id="red">...</li>
                 </ul>
             </div>
 
             <div class="col-6 col-m-9">
-                <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
-                <img id="drag1" src="img_logo.gif" draggable="true"
-                     ondragstart="drag(event)" width="336" height="69">
             </div>
 
             <div class="col-3 col-m-12">
                 <div class="aside">
-                    StudentList
-                    ....
+                    <h3>STUDENT LIST</h3>
+                    <div id="showStudentList"></div>
+                    <script src="../js/show_list.js"></script>
                 </div>
             </div>
 
         </div>
-        <script src="js/navigation.js"></script>
+
+
+
+
     </body>
 </html>
