--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -12,8 +12,6 @@
         <div class="topnav" id="myTopnav">
             <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
             <a><h1>iCheck</h1></a>
-            <a href="../pages/classcode.html" style="float: right"><h1>Classcodes</h1></a>
-            <a href="../index.html" style="float: right"><h1>Home</h1></a>
         </div>
 
 
@@ -33,8 +31,8 @@
         <div class="row">
             <div class="col-3 col-m-3 menu">
                 <ul>
-                    <li id="blue" onclick="CreateTableFromJSON('class_9413A')">9413A IT324 Networks 11:30-12:30 TF</li>
-                    <li id="purple"onclick="CreateTableFromJSON('class_9415B')">9415B KUNWARI</li>
+                    <li id="blue" onclick="CreateTableFromJSON('class_9413A')">9413A IT324 Networks <br/> 11:30-12:30 TF</li>
+                    <li id="purple"onclick="CreateTableFromJSON('class_9415B')">9415B <br/> KUNWARI</li>
                     <li id="green">...</li>
                     <li id="red">...</li>
                 </ul>
@@ -45,7 +43,7 @@
             </div>
 
             <div class="col-3 col-m-12">
-                <div class="aside">
+                <div id="aside">
                     <h3>STUDENT LIST</h3>
                     <div id="showStudentList"></div>
                     <script src="../js/show_list.js"></script>
