added javascript for canvas

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -32,16 +32,18 @@
         <div class="row">
             <div class="col-3 col-m-3 menu">
                 <ul>
-                    <li id="blue">9415A</li>
-                    <li id="purple">...</li>
-                    <li id="green">...</li>
-                    <li id="red">...</li>
+                    <script src="js/classcodes.js"></script>
+                    <!--<li id="blue"></li>-->
+                    <!--<li id="purple">...</li>-->
+                    <!--<li id="green">...</li>-->
+                    <!--<li id="red">...</li>-->
                 </ul>
             </div>
 
-            <div class="col-6 col-m-9">
-                BODY
+            <div  class="col-6 col-m-9">
+
             </div>
+
 
             <div class="col-3 col-m-12">
                 <div class="aside">
