--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/navigation.css" rel="stylesheet">
-
+        <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
         <script src="../js/navigation.js"></script>
     </head>
     <body>
@@ -39,7 +39,13 @@
             </div>
 
             <div class="col-6 col-m-9">
-
+                <form name="valform" action="" method="POST">
+                    columns: <input type="number" id="columns" value="value" /></form>
+                    rows: <input type="number" id="rows" value="value" /></form>
+                <input type="button" name="submit" value="Submit" onclick="clearTable();createTable(document.getElementById('columns').value,document.getElementById('rows').value);" />
+                <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;">
+                </canvas>
+                <script src="../js/canvas.js"></script>
             </div>
 
             <div class="col-3 col-m-12">
