changed mouse event on subjects

--- a/web-app/pages/home.html
+++ b/web-app/pages/home.html
@@ -13,7 +13,7 @@
 
             <a><h1>iCheck</h1></a>
             <a href="classcode.html" style="float: right"><h1>Classcodes</h1></a>
-            <a href="home.html" style="float: righ"><h1>Home</h1></a>
+            <a href="home.html" style="float: right"><h1>Home</h1></a>
         </div>
 
         <div id="mySidenav" class="sidenav">
