--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -33,10 +33,10 @@
         <div class="row">
             <div class="col-2 col-m-3 menu">
                 <ul>
-                    <li id="blue" onmouseenter="CreateTableFromJSON('class_9413A')">9413A IT322<br/>11:30 - 12:30 TF</li>
-                    <li id="purple" onmouseenter="CreateTableFromJSON('class_9413B')">9415B IT322L<br/>9:00 - 12:00 W</li>
-                    <li id="green" onmouseenter="CreateTableFromJSON('class_9414A')">9414A IT323<br/>10:30 - 11:30 TF</li>
-                    <li id="red" onmouseenter="CreateTableFromJSON('class_9414B')">9414B IT323L<br/>9:00 - 10:30 MTH</li>
+                    <li id="blue" onclick="CreateTableFromJSON('class_9413A')">9413A IT322<br/>11:30 - 12:30 TF</li>
+                    <li id="purple" onclick="CreateTableFromJSON('class_9413B')">9415B IT322L<br/>9:00 - 12:00 W</li>
+                    <li id="green" onclick="CreateTableFromJSON('class_9414A')">9414A IT323<br/>10:30 - 11:30 TF</li>
+                    <li id="red" onclick="CreateTableFromJSON('class_9414B')">9414B IT323L<br/>9:00 - 10:30 MTH</li>
                 </ul>
             </div>
 
