modified seat plan canvas

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -42,7 +42,7 @@
 
             <div class="col-8 col-m-9" id="scroll_seatPlan">
                     <div id="subject_name" style="text-align: center"><h1 id="subject"></h1></div>
-                    <canvas id="seatPlan"></canvas>
+                    <canvas id="seatPlan" onclick="DefinePaths(event)"></canvas>
                     <script src="../js/studentCanvas.js"></script>
             </div>
 
