test clickable canvas

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -45,14 +45,15 @@
             </div>
 
 
-            <div class="col-6 col-m-9">
-                <form name="valform" action="" method="POST">
-                    columns: <input type="number" id="columns" value="value" /></form>
-                    rows: <input type="number" id="rows" value="value" /></form>
-                <input type="button" name="submit" value="Submit" onclick="clearTable();createTable(document.getElementById('columns').value,document.getElementById('rows').value);" />
-                <canvas id="myCanvas" width="800" height="500" style="border:1px solid #000000;">
-                </canvas>
-                <script src="../js/canvas.js"></script>
+            <!--<div class="col-6 col-m-9">-->
+                <!--<form name="valform" action="" method="POST">-->
+                    <!--columns: <input type="number" id="columns" value="value" /></form>-->
+                    <!--rows: <input type="number" id="rows" value="value" /></form>-->
+                <!--<input type="button" name="submit" value="Submit" onclick="clearTable();createTable(document.getElementById('columns').value,document.getElementById('rows').value);" />-->
+                <!--<canvas id="myCanvas" width="800" height="500" style="border:1px solid #000000;">-->
+                <!--</canvas>-->
+                <!--<script src="../js/canvas.js"></script>-->
+            <!--</div>-->
 
             <div class="col-8 col-m-9" id="scroll_seatPlan">
                     <div id="subject_name" style="text-align: center"><h1 id="subject"></h1></div>
