--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -68,6 +68,10 @@
                     </div>
                     <script src="../js/modal.js"></script>
                 </div>
+
+                <!--<button class="modal-button" id="modal-late">Late</button>-->
+                <!--<button class="modal-button" id="modal-absent">Absent</button>-->
+
             </div>
 
             <div class="col-2 col-m-5">
