--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -59,6 +59,7 @@
                                 <select id="selector">
                                     <option></option>
                                     <script src="../js/drop-downModal.js"></script>
+                                    <input type="button" onclick="setName()"/>
                                 </select>
                             </label>
                         </div>
@@ -86,7 +87,9 @@
                             <h3>STUDENT LIST</h3>
                         </div>
                         <div class="modal-body">
-                            <div id="showStudentList"></div>
+                            <div id="showStudentList">
+                                <script>printStudentList();</script>
+                            </div>
                         </div>
                         <script src="../js/show_list.js"></script>
                         <div class="modal-footer" id="studList-modalFooter">
