fixed functionalities for assigning seatplan

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -59,7 +59,7 @@
                                 <select id="selector">
                                     <option></option>
                                     <script src="../js/drop-downModal.js"></script>
-                                    <input type="button" onclick="setName()"/>
+                                    <input type="button" value="OK" onclick="setName()"/>
                                 </select>
                             </label>
                         </div>
