separated Class_List

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -7,6 +7,8 @@
 
         <link href="../css/modal.css" rel="stylesheet">
         <script src="../js/navigation.js"></script>
+        <script src="../json/Class_List.js"></script>
+        <script src="../json/temp.js"></script>
 
     </head>
     <body>
@@ -33,10 +35,10 @@
         <div class="row">
             <div class="col-2 col-m-3 menu">
                 <ul>
-                    <li id="blue" onclick="CreateTableFromJSON('class_9413A');">9413A IT322<br/>11:30 - 12:30 TF</li>
-                    <li id="purple" onclick="CreateTableFromJSON('class_9413B')">9415B IT322L<br/>9:00 - 12:00 W</li>
-                    <li id="green" onclick="CreateTableFromJSON('class_9414A')">9414A IT323<br/>10:30 - 11:30 TF</li>
-                    <li id="red" onclick="CreateTableFromJSON('class_9414B')">9414B IT323L<br/>9:00 - 10:30 MTH</li>
+                    <li id="blue" onclick="temp_classcode('class_9413A'); CreateTableFromJSON()">9413A IT322<br/>11:30 - 12:30 TF</li>
+                    <li id="purple" onclick="temp_classcode('class_9413B');">9415B IT322L<br/>9:00 - 12:00 W</li>
+                    <li id="green" onclick="temp_classcode('class_9414A');">9414A IT323<br/>10:30 - 11:30 TF</li>
+                    <li id="red" onclick="temp_classcode('class_9414B');">9414B IT323L<br/>9:00 - 10:30 MTH</li>
                 </ul>
             </div>
 
@@ -94,7 +96,7 @@
                         <div class="modal-body">
                             <div id="showStudentList">
                                 <ul style="list-style: none; color: black; text-align: left; font-size: larger">
-                                    <script>printStudentList('class_9413A');</script>
+                                    <script>printStudentList();</script>
                                 </ul>
                             </div>
                         </div>
