fixed dropdown modal

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -35,11 +35,11 @@
         <div class="row">
             <div class="col-2 col-m-3 menu">
                 <ul>
-
-                    <li id="blue" onclick="temp_classcode('class_9413A');">9413A IT322<br/>11:30 - 12:30 TF</li>
-                    <li id="purple" onclick="temp_classcode('class_9413B');">9415B IT322L<br/>9:00 - 12:00 W</li>
-                    <li id="green" onclick="temp_classcode('class_9414A');">9414A IT323<br/>10:30 - 11:30 TF</li>
-                    <li id="red" onclick="temp_classcode('class_9414B');">9414B IT323L<br/>9:00 - 10:30 MTH</li>
+                    <!--<script src="../js/classcodes.js"></script>-->
+                    <li id="blue" onclick="temp_classcode('class_9413A');dropDown('class_9413A');">9413A IT322<br/>11:30 - 12:30 TF</li>
+                    <li id="purple" onclick="temp_classcode('class_9413B');dropDown('class_9413B');">9415B IT322L<br/>9:00 - 12:00 W</li>
+                    <li id="green" onclick="temp_classcode('class_9414A');dropDown('class_9414A');">9414A IT323<br/>10:30 - 11:30 TF</li>
+                    <li id="red" onclick="temp_classcode('class_9414B');dropDown('class_9414B');">9414B IT323L<br/>9:00 - 10:30 MTH</li>
                 </ul>
             </div>
 
