separated json file and fixed functionalities

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="manifest.appcache">
 <head>
     <meta charset="UTF-8">
 
@@ -7,6 +7,12 @@
 
     <link href="css/login.css" rel="stylesheet">
     <script src="js/login.js"></script>
+    <script src="json/temp.js"></script>
+    <script src="json/Class_List.js"></script>
+    <script src="json/Classroom_List.js"></script>
+    <script src="json/Users_List.js"></script>
+    <script>storeData()</script>
+
 </head>
 <body>
 
