--- a/web-app/pages/home.html
+++ b/web-app/pages/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html manifest="cache.manifest">
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/navigation.css" rel="stylesheet">
