--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/navigation.css" rel="stylesheet">
 
@@ -36,6 +38,7 @@
             <div class="col-2 col-m-3 menu">
                 <ul>
                     <!--<script src="../js/classcodes.js"></script>-->
+                    <!--<li id="blue" onclick="temp_classcode('class_9413A');">9413A IT322<br/>11:30 - 12:30 TF</li>-->
                     <li id="blue" onclick="temp_classcode('class_9413A');">9413A IT322<br/>11:30 - 12:30 TF</li>
                     <li id="purple" onclick="temp_classcode('class_9413B');">9415B IT322L<br/>9:00 - 12:00 W</li>
                     <li id="green" onclick="temp_classcode('class_9414A');">9414A IT323<br/>10:30 - 11:30 TF</li>
