--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -76,6 +76,26 @@
                     <script src="../js/modal.js"></script>
                 </div>
 
+                <!-- The Modal for Late/Absent Students -->
+                <div id="lateAbsent" class="modal">
+
+                    <!-- Modal content for each box -->
+                    <div class="modal-content">
+                        <div class="modal-header" id="lateAbsent-Header">
+                            <span class="close">&times;</span>
+                            <h3>Seat Plan</h3>
+                        </div>
+                        <div class="modal-body">
+                            <button class="modal-button" id="modal-late">Late</button>
+                            <button class="modal-button" id="modal-absent">Absent</button>
+                        </div>
+                        <div class="modal-footer" id="lateAbsent-Footer">
+                            &emsp;
+                        </div>
+                    </div>
+                    <script src="../js/modal.js"></script>
+                </div>
+
                 <!--<button class="modal-button" id="ok-Btn" onclick="setName()">Ok</button>-->
                 <!--<button class="modal-button" id="modal-late">Late</button>-->
                 <!--<button class="modal-button" id="modal-absent">Absent</button>-->
