added student list on home page

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -57,7 +57,7 @@
                 <div id="subject_name" style="text-align: center"><h1 id="subject"></h1></div>
 
                 <div class="tooltip">
-                    <canvas id="seatPlan" onmousedown="DefinePaths(event)" onmouseover="hover()"></canvas>
+                    <canvas id="seatPlan" onmousedown="DefinePaths(event)"></canvas>
                 </div>
 
                 <script src="../js/studentCanvas.js"></script>
