--- a/web-app/pages/home.html
+++ b/web-app/pages/home.html
@@ -7,43 +7,54 @@
     <link rel="stylesheet" type="text/css" href="../css/navigation.css">
     <link rel="stylesheet" type="text/css" href="../css/calendar.css">
     <link rel="stylesheet" type="text/css" href="../css/datepicker.css">
+    <link type="text/css" rel="stylesheet" href="../css/studentListTable.css">
 
     <script type="text/javascript" src="../js/datepicker.js"></script>
     <script type="text/javascript" src="../js/navigation.js"></script>
     <script type="text/javascript" src="../js/calendar.js"></script>
+    <script type="text/javascript" src="../js/sort-table.js"></script>
+    <script type="text/javascript" src="../js/student-table.js"></script>
 </head>
 <body>
 
-<!--Top Navigation-->
-<div class="topnav" id="myTopnav">
-    <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
-    <a><h1>iCheck</h1></a>
-    <a href="classcode.html" style="float: right"><h1>Classcodes</h1></a>
-    <a href="javascript:void(0);" style="font-size:x-large; float: right" class="icon" onclick="topNav()">&#8942;</a>
-    <a href="home.html" style="float: right"><h1>Dashboard</h1></a>
+    <!--Top Navigation-->
+    <div class="topnav" id="myTopnav">
+        <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
+        <a><h1>iCheck</h1></a>
+        <a href="classcode.html" style="float: right"><h1>Classcodes</h1></a>
+        <a href="javascript:void(0);" style="font-size:x-large; float: right" class="icon" onclick="topNav()">&#8942;</a>
+        <a href="home.html" style="float: right"><h1>Dashboard</h1></a>
 
-</div>
+    </div>
 
-<!--Side-Menu-->
-<div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#" id="profile"><img id ="profpic" src="../images/icon.png" alt="icheck_logo"><br/>John Doe<br/>contact@example.com</a>
-    <a href="#"><img src="../images/icons/glyphicons-4-user.png" alt="profile-icon">&emsp;Profile</a>
-    <a href="#"><img src="../images/icons/glyphicons-137-cogwheel.png" alt="profile-icon">&emsp;Account Settings</a>
-    <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Sync</a>
-    <a href="#"><img src="../images/icons/glyphicons-281-settings.png" alt="profile-icon">&emsp;Customize</a>
-    <a href="#"><img src="../images/icons/glyphicons-197-exclamation-sign.png" alt="profile-icon">&emsp;Report Problem</a>
-    <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Privacy and Terms</a>
-    <a href="#"><img src="../images/icons/glyphicons-195-question-sign.png" alt="profile-icon">&emsp;Help</a>
-    <a href="#"><img src="../images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
-</div>
+    <!--Side-Menu-->
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#" id="profile"><img id ="profpic" src="../images/icon.png" alt="icheck_logo"><br/>John Doe<br/>contact@example.com</a>
+        <a href="#"><img src="../images/icons/glyphicons-4-user.png" alt="profile-icon">&emsp;Profile</a>
+        <a href="#"><img src="../images/icons/glyphicons-137-cogwheel.png" alt="profile-icon">&emsp;Account Settings</a>
+        <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Sync</a>
+        <a href="#"><img src="../images/icons/glyphicons-281-settings.png" alt="profile-icon">&emsp;Customize</a>
+        <a href="#"><img src="../images/icons/glyphicons-197-exclamation-sign.png" alt="profile-icon">&emsp;Report Problem</a>
+        <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Privacy and Terms</a>
+        <a href="#"><img src="../images/icons/glyphicons-195-question-sign.png" alt="profile-icon">&emsp;Help</a>
+        <a href="#"><img src="../images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
+    </div>
 
-<div class="col-5" style="overflow-x: scroll">
+    <div class="col-5" style="overflow-x: scroll">
 
-    <script type="text/javascript">
-        calendar();
-    </script>
-</div>
+        <script type="text/javascript">
+            calendar();
+        </script>
+    </div>
+
+    <div class="col-6">
+
+        <script>CreateTableFromJSON()</script>
+        <div id="showData"></div>
+
+
+    </div>
 
 </body>
 </html>
