--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -20,9 +20,7 @@
         <div class="topnav" id="myTopnav">
             <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
             <a><h1>iCheck</h1></a>
-            <a href="classcode.html" style="float: right"><h1>Classcodes</h1></a>
-            <a href="javascript:void(0);" style="font-size:x-large; float: right" class="icon" onclick="topNav()">&#8942;</a>
-            <a href="home.html" style="float: right"><h1>Dashboard</h1></a>
+            <!--<a href="javascript:void(0);" style="font-size:x-large; float: right" class="icon" onclick="topNav()">&#8942;</a>-->
         </div>
 
 
@@ -55,6 +53,10 @@
 
             <div class="col-8 col-m-9" id="scroll_seatPlan">
                 <div id="subject_name" style="text-align: center"><h1 id="subject"></h1></div>
+                <div id="date-container">
+                    <input id="date" title="date" type="date"/><br/>
+                    <script type="text/javascript" src="../js/date-today.js"></script>
+                </div>
 
                 <div class="tooltip">
                     <canvas id="seatPlan" onmousedown="DefinePaths(event)"></canvas>
@@ -98,9 +100,6 @@
                         </div>
                         <div class="modal-body">
                             <input id="studentName" disabled="disabled" placeholder="STUDENT NAME" type="text"/>
-                            <input id="date" title="date" type="date"/><br/>
-                            <script type="text/javascript" src="../js/date-today.js"></script>
-
                             <button class="modal-button" id="modal-late" onclick="markLate();">Late</button>
                             <button class="modal-button" id="modal-absent" onclick="markAbsent();">Absent</button>
                         </div>
