--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -53,10 +53,10 @@
 
             <div class="col-8 col-m-9" id="scroll_seatPlan">
                 <div id="subject_name" style="text-align: center"><h1 id="subject"></h1></div>
-                <div id="date-container">
-                    <input id="date" title="date" type="date"/><br/>
-                    <script type="text/javascript" src="../js/date-today.js"></script>
-                </div>
+                <!--<div id="date-container">-->
+                    <!--<input id="date" title="date" type="date"/><br/>-->
+                    <!--<script type="text/javascript" src="../js/date-today.js"></script>-->
+                <!--</div>-->
 
                 <div class="tooltip">
                     <canvas id="seatPlan" onmousedown="DefinePaths(event)"></canvas>
@@ -112,6 +112,12 @@
             </div>
 
             <div class="col-2 col-m-5">
+
+                <div id="date-container">
+                <input id="date" title="date" type="date"/><br/>
+                <script type="text/javascript" src="../js/date-today.js"></script>
+                </div>
+
                 <!-- Trigger/Open The Modal -->
                 <button id="myBtn" onmousedown="fModal('myBtn');printStudentList(localStorage.getItem('classcode'));">Student List</button><br/>
                 <button id="lateBtn" onmousedown="fModal('lateBtn');">Late</button>
