fixed width issues

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-2 col-m-3 menu">
                 <ul id="classList">
-                    <li id="add-class" onclick="">ADD CLASS</li>
+                    <li id="add-class" onclick="">DOWNLOAD CLASS</li>
                     <!--<script type="text/javascript" src="../js/classcodes.js"></script>-->
 
                     <li id="blue" onclick="temp_classcode('class_9413A');DefinePaths(event);">9413A IT322<br/>11:30 - 12:30 TF</li>
@@ -99,7 +99,7 @@
                             <h3>Seat Plan</h3>
                         </div>
                         <div class="modal-body">
-                            <input id="studentName" disabled="disabled" placeholder="STUDENT NAME" type="text"/>
+                            <input id="studentName" disabled="disabled" placeholder="STUDENT NAME" type="text"/> <br/>
                             <button class="modal-button" id="modal-late" onclick="markLate();">Late</button>
                             <button class="modal-button" id="modal-absent" onclick="markAbsent();">Absent</button>
                         </div>
