fixed selstyle bug

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -78,7 +78,7 @@
                                     <script src="../js/drop-downModal.js"></script>
                                 </select>
                             </label>
-                            <button class="modal-button" id="ok-Btn" onclick="setName(localStorage.getItem('classcode'))">Ok</button>
+                            <button class="modal-button" id="ok-Btn" onclick="setName(localStorage.getItem('classcode'));DefinePaths(event);DefinePaths(event);">Ok</button>
                         </div>
                         <div class="modal-footer" id="box-Footer">
                             &emsp;
