fixed log in issue

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -20,7 +20,9 @@
         <div class="topnav" id="myTopnav">
             <a><button onclick="openNav()" id = "menu">&#9776;</button></a>
             <a><h1>iCheck</h1></a>
-            <!--<a href="javascript:void(0);" style="font-size:x-large; float: right" class="icon" onclick="topNav()">&#8942;</a>-->
+            <a href="classcode.html" style="float: right"><h1>Classcodes</h1></a>
+            <a href="javascript:void(0);" style="font-size:x-large; float: right" class="icon" onclick="topNav()">&#8942;</a>
+            <a href="home.html" style="float: right"><h1>Dashboard</h1></a>
         </div>
 
 
@@ -34,7 +36,7 @@
             <a href="#"><img src="../images/icons/glyphicons-197-exclamation-sign.png" alt="profile-icon">&emsp;Report Problem</a>
             <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Privacy and Terms</a>
             <a href="#"><img src="../images/icons/glyphicons-195-question-sign.png" alt="profile-icon">&emsp;Help</a>
-            <a href="#"><img src="../images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
+            <a href="../index.html"><img src="../images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
         </div>
 
         <div class="row">
