fixed link functions issue

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="../js/studentCanvas.js"></script>
         <script type="text/javascript" src="../json/temp.js"></script>
 
+
     </head>
     <body>
 
@@ -43,13 +44,7 @@
             <div class="col-2 col-m-3 menu">
                 <ul id="classList">
                     <li id="add-class" onclick="">DOWNLOAD CLASS</li>
-                    <!--<script type="text/javascript" src="../js/classcodes.js"></script>-->
-
-                    <li id="blue" onclick="temp_classcode('class_9413A');clearBox();DefinePaths(event);">9413A IT322<br/>11:30 - 12:30 TF</li>
-                    <li id="purple" onclick="temp_classcode('class_9413B');clearBox();DefinePaths(event);">9415B IT322L<br/>9:00 - 12:00 W</li>
-                    <li id="green" onclick="temp_classcode('class_9414A');clearBox();DefinePaths(event);">9414A IT323<br/>10:30 - 11:30 TF</li>
-                    <li id="red" onclick="temp_classcode('class_9414B');clearBox();DefinePaths(event);">9414B IT323L<br/>9:00 - 10:30 MTH</li>
-
+                    <script type="text/javascript" src="../js/classcodes.js"></script>
                 </ul>
             </div>
 
@@ -199,5 +194,6 @@
                 </div>
             </div>
         </div>
+
     </body>
 </html>
