--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-2 col-m-3 menu">
                 <ul id="classList">
-                    <li id="add-class" onclick="">DOWNLOAD CLASS</li>
+                    <li id="add-class" onclick="getData()">DOWNLOAD CLASS</li>
                     <script type="text/javascript" src="../js/classcodes.js"></script>
                 </ul>
             </div>
