--- a/web-app/pages/home.html
+++ b/web-app/pages/home.html
@@ -41,7 +41,7 @@
 
         <div class="col-6">
             <div class="row">
-                <input id="date" title="date" type="date" style="width: 200px"/>
+                <input id="date" title="date" type="date" style="width: 200px" oninput="CreateTableFromJSON()"/>
                 <script type="text/javascript" src="../js/date-today.js"></script>
                 <input type="text" id="myInput" onkeyup="search()" placeholder="Search.." title="Type in a name">
             </div>
