fixed issues on lec and lab button

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -7,12 +7,13 @@
 
     <link href="css/login.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/login.js"></script>
-    <script src="json/temp.js"></script>
-    <script src="json/Class_List.js"></script>
-    <script src="json/Classroom_List.js"></script>
-    <script src="json/Users_List.js"></script>
-    <script>storeData()</script>
+
+    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="json/temp.js"></script>
+    <script type="text/javascript" src="json/Users_List.js"></script>
+    <script type="text/javascript" src="json/Class_List.js"></script>
+    <script type="text/javascript" src="json/Classroom_List.js"></script>
+    <script>storeData()</script>;
 
 </head>
 <body>
