fixed canvas issue

--- a/web-app/pages/classcode.html
+++ b/web-app/pages/classcode.html
@@ -35,7 +35,7 @@
             <a href="#"><img src="../images/icons/glyphicons-197-exclamation-sign.png" alt="profile-icon">&emsp;Report Problem</a>
             <a href="#"><img src="../images/icons/glyphicons-82-refresh.png" alt="profile-icon">&emsp;Privacy and Terms</a>
             <a href="#"><img src="../images/icons/glyphicons-195-question-sign.png" alt="profile-icon">&emsp;Help</a>
-            <a href="../index.html" onclick="clearStorage();"><img src="../images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
+            <a href="../index.html"><img src="../images/icons/glyphicons-388-log-out.png" alt="icheck_logo">&emsp;Log out</a>
         </div>
 
         <div class="row">
@@ -52,8 +52,8 @@
                 <!--Creating SeatPlan-->
 
                 <canvas id="seatPlan" onmousedown="DefinePaths(event,localStorage.getItem('classcode'))" style="display: none"></canvas>
-                <button class ="createCanvass" id="Lec" >Lec</button>
-                <button class ="createCanvass" id="Lab" >Lab</button>
+                <button class ="createCanvass" id="Lec">Lec</button>
+                <button class ="createCanvass" id="Lab">Lab</button>
                 <script src="../js/studentCanvas.js"></script>
 
                 <!-- The Modal for each box -->
